Fix: Took min-width out of backgrounds due to width issues on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 
 *{
     scroll-behavior: smooth;
-    font-size: 15px;
+    font-size: 20px;
     color: #fafafa;
 }
 
@@ -34,7 +34,6 @@
     background: url("/assets/images/landing-page.jpg") no-repeat center center;
     background-size: cover;
     min-height: 100vh;
-    min-width: 100vh;
     border-radius: 0;  
 }
 
@@ -42,16 +41,14 @@
     background: url("../images/content-picture2.jpg") no-repeat center center;
     background-size: cover;
     min-height: 100vh;
-    min-width: 100vh;
     border-radius: 0;
-    padding-top: 200px;
+    padding-top: 5%;
 }
 
 #content-picture3 {
     background: url("../images/content-picture3.jpg") no-repeat center center;
     background-size: cover;
     min-height: 100vh;
-    min-width: 100vh;
     border-radius: 0;
 }
 
@@ -59,7 +56,6 @@
     background: url("../images/content-picture4.jpg") no-repeat center center;
     background-size: cover;
     min-height: 100vh;
-    min-width: 100vh;
     border-radius: 0;
 }
 
@@ -101,34 +97,18 @@
 .aboutme-container{
     color: #ffffff;
     margin-left: 1%;
-    background-color: rgba(100, 100, 100, 0.5);
-}
+    background-color: rgba(100, 100, 100, 0.5); 
+    }
 
-.header-aboutme{
-    text-align: center;
-}
-.about-text{
+.aboutme-container h3{
     text-align: center;
 }
 
-#aboutme{
-    text-align: center;
-    max-width: 25%;
-}
-
-#furtherinfo{
-    text-align: center;
-    max-width: 25%;
-}
-
-.about-text{
-    padding: 0;
-}
-
-.about-text p{
-    text-align: left;
-    padding-top: 10px;
-    padding-left: 4%;
+.aboutme-container p{
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-bottom: 25px;
+    padding-top: 25px;
 }
 
 /*------------------------- Portfolio------ */
@@ -204,17 +184,45 @@
     padding-top: 0;
 }
 
-.form-group{
-    max-width: 40%;
-    background-color: rgba(132, 132, 132, 0.2);
-    margin-top: 10%;
-    margin-left: 15%;
+#first-name{
+    margin-top: 15px;
 }
-
 .first-name{
     padding-top: 25px;
 }
 
+.form-group{
+    max-width: 50%;
+    background-color: rgba(132, 132, 132, 0.8);
+    margin-top: 20%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.form-group input{
+    text-align: center;
+    margin-bottom: 15px;
+}
+
+#button-send {
+    margin-left: 45%;
+}
+
+.form-group textarea{
+    text-align: center;
+    margin-bottom: 15px;
+}
+
+#small-align {
+    text-align: center;
+    margin-bottom: 25px;
+    padding: 50px;
+}
+
+
+#button-send:hover {
+    background-color: #75366c;
+}
 /*------------------------- Footer------ */
 
 footer{
@@ -239,11 +247,12 @@ footer{
 
 .cv-download i{
     font-size: 400%;
+    color: #808080;
 }
 
 .cv-download i:hover {
-    color: #303030;
-    }
+    color: #212121;
+}
 
 .social-media{
     text-align: center;
@@ -256,13 +265,12 @@ footer{
 
 .social-media i{
     font-size: 400%;
-    padding: auto 0;
+    margin-left: auto;
 }
 
 .social-media i:hover {
     color: #303030;
     }
-
 
 /*------------------------- Media Query's------ */
 @media only screen and (max-width: 576px) {
@@ -275,10 +283,9 @@ footer{
     }
     .form-group{
     max-width: 80%;
-    background-color: rgba(132, 132, 132, 0.2);
     margin-top: 15%;
-    margin-left: 0;
     }
+
     .row{
     margin: 0;
     }
